# Monitor-Level-Air-King-Fikra

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Penyimpanan  & Ekspor Data/include/: data_manager.h
Penyimpanan  & Ekspor Data/include/nlohmann/: json.hpp
Penyimpanan  & Ekspor Data/src/: data_manager.cpp  data_manager.h  main.cpp
Sorting/: common_types.h  event_processor.cpp  event_processor.h  main.cpp
Sorting/include/: data_operations.h
Sorting/src/: data_operations.cpp
client/include/: client.cpp
client/src/: client.cpp
server/: CMakeLists.txt
server/include/: Server.hpp
server/src/: Server.cpp  main.cpp
shared/include/: Tank.h  common_types.h  config.h
